@@ -124,7 +124,7 @@ AC_SUBST([ISODATE])
 # release, then set age to 0.
 #
 LIBFREEIPMI_CURRENT=16
-LIBFREEIPMI_REVISION=3
+LIBFREEIPMI_REVISION=4
 LIBFREEIPMI_AGE=0
 
 LIBFREEIPMI_VERSION=$LIBFREEIPMI_CURRENT.$LIBFREEIPMI_REVISION.$LIBFREEIPMI_AGE
@@ -146,7 +146,7 @@ AC_SUBST([LIBFREEIPMI_VERSION_INFO])
 
 LIBFREEIPMI_VERSION_MAJOR=5
 LIBFREEIPMI_VERSION_MINOR=0
-LIBFREEIPMI_VERSION_PATCH=3
+LIBFREEIPMI_VERSION_PATCH=4
 
 AC_SUBST(LIBFREEIPMI_VERSION_MAJOR)
 AC_SUBST(LIBFREEIPMI_VERSION_MINOR)
